<resources>
    <string name="app_name">MVVM Greedy Snake</string>

    
    <string name="title_peer_msg">Peer to peer message</string>
    <string name="title_channel_message">Channel message</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="hint_enable_offline_message">Enable offline message</string>
    <string name="account_cannot_be_yourself">Account can not be yourself</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_join">Join</string>

    <string name="account_empty">Account can not be empty</string>
    <string name="account_too_long">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space">Account can not starts with space</string>
    <string name="account_literal_null">Account can not be \"null\"</string>

    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>

    <string name="join_channel_failed">Join channel failed</string>

    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>

    <string name="channel_title" translatable="false">%s(%d)</string>

    <string name="single_input">Single line input</string>

    <!--  IndexActivity  -->
    <string name="signup">註冊</string>
    <string name="account">帳號</string>
    <string name="nickname">暱稱</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="login">登入</string>
    <string name="google_login">Google登入</string>
    <string name="login_success">登入成功!</string>
    <string name="login_failure">登入失敗!</string>
    <string name="chatroom_login_success">聊天室登入成功!</string>
    <string name="chatroom_login_failure">聊天室登入失敗!</string>
    <string name="logout">登出</string>
    <string name="logout_confirm">您確定要登出帳號嗎?</string>
    <string name="logout_success">您已登出帳號!</string>
    <string name="hello">您好!</string>
    <string name="hello_visitor">訪客您好!</string>
    <string name="greedy_snake_game">貪吃蛇遊戲</string>
    <string name="greedy_snake_rank">貪吃蛇排行榜</string>
    <string name="chat_room">聊天室</string>
    <string name="chat_room_login_alertdialog_title">你確定要登入聊天室嗎?</string>
    <string name="chat_room_logout_alertdialog_title">你確定要登出聊天室嗎?</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>

    <!--  GameActivity  -->
    <string name="replay">再玩一次</string>
    <string name="score">分數:</string>
    <string name="control_up">上</string>
    <string name="control_down">下</string>
    <string name="control_left">左</string>
    <string name="control_right">右</string>
    <string name="game_over">遊戲結束</string>
    <string name="save">儲存紀錄</string>
    <string name="total_score">總分:</string>
    <string name="record_insert_success">分數寫入成功!</string>

    <!--  RankActivity  -->
    <string name="leaderboard">排行榜</string>
    <string name="end_of_distance">距離結束</string>
    <string name="day">天</string>
    <string name="hour">時</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="double_zero">00</string>

    <!--    ChatRoomActivity -->
    <string name="friends_list">好友清單</string>
    <string name="friends_name">好友名字</string>
    <string name="add_friends">新增好友</string>
    <string name="group">群組</string>
    <string name="group_name">群組名字</string>
    <string name="add_group">創建群組</string>
    <string name="messages">訊息</string>

    <!--    MessageActivity -->
    <string name="input_messages">請輸入一些訊息</string>
    <string name="send_messages">傳送</string>

</resources>